ssl/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-back
  namespace: task
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: devops-sre.space
    http:
      paths:
      - backend:
          service:
            name: "frontend"
            port:
              number: 80
        path: "/?(.*)"
        pathType: Prefix
      - backend:
          service:
            name: "backend"
            port:
              number: 8080
        path: "/api/quiz/select?(.*)"
        pathType: Prefix  
  tls:
  - hosts:
    - devops-sre.space
    secretName: your-tls-secret
